payment place order

--- a/config-server/src/main/resources/configurations/payment-service.yml
+++ b/config-server/src/main/resources/configurations/payment-service.yml
@@ -45,3 +45,4 @@ spring:
 application:
   config:
     order-management: http://localhost:8084/api/v1/orders
+    user-management: http://localhost:8082/api/v1/users
