--- a/config-server/src/main/resources/configurations/api-gateway.yml
+++ b/config-server/src/main/resources/configurations/api-gateway.yml
@@ -32,3 +32,7 @@ spring:
           uri: http://localhost:8085
           predicates:
             - Path=/api/v1/payments/**
+        - id: NOTIFICATION-SERVICE
+          uri: http://localhost:8086
+          predicates:
+            - Path=/api/v1/notifications/**
