--- a/config-server/src/main/resources/configurations/shopping-cart.yml
+++ b/config-server/src/main/resources/configurations/shopping-cart.yml
@@ -22,3 +22,4 @@ spring:
 application:
   config:
     product-catalog: http://localhost:8081/api/v1/products
+    user-management: http://localhost:8082/api/v1/users
